--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -41,5 +41,11 @@
   "Repeat Password": "Repeat Password",
   "Register": "Register",
   "Log in": "Log in",
-  "ConsulHeader": "قائمة الاستشارات الجديدة "
+  "ConsulHeader": "قائمة الاستشارات الجديدة ",
+  "Details": "تفاصيل...",
+  "Process": "إحالة",
+  "Approve": "إعتماد",
+  "Assign": "تكليف",
+  "CComiteeM":"إدخال قرار اللجنة",
+  "CComiteeA":"إرسال قرار اللجنة"
 }
