--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -47,5 +47,6 @@
   "Approve": "إعتماد",
   "Assign": "تكليف",
   "CComiteeM":"إدخال قرار اللجنة",
-  "CComiteeA":"إرسال قرار اللجنة"
+  "CComiteeA":"إرسال قرار اللجنة",
+  "AttachPlan": "إرفاق الخطة"
 }
